--- a/styles/index.css
+++ b/styles/index.css
@@ -11,7 +11,7 @@ li
     transition: opacity 100ms ease-in-out;
 }
 
-li:focus-visible
+ul:focus-visible
 {
     outline: none;
 }
@@ -21,7 +21,7 @@ li:not(:focus-visible)
     opacity: 0.8;
 }
 
-li.completed
+li[data-completed="true"]
 {
     text-decoration: line-through;
     opacity: 0.5;
